k8s/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#
#metadata:
#  name: ebookshop-ingress
#  namespace: ebookshop
#
#spec:
#  ingressClassName: traefik
#
#  rules:
#    - host: ebookshop.local
#
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#
#            backend:
#              service:
#                name: frontend-service
#
#                port:
#                  number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebookshop-ingress
  namespace: ebookshop
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
